(MVNSH-34) Re-implemented history interfaces, updated history commands so that recall works properly